# evacuation-gui-iced

./: .clang-tidy  .editorconfig  .eslintignore  .eslintrc.json  .gitignore  .gitmodules  .prettierignore  .prettierrc  .stylelintrc.json  Cargo.toml  README.md  bsconfig.json  cypress.config.ts  eslint.config.js  index.html  logger.conf  package-lock.json  package.json  rustfmt.toml  scenario.json  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  vite.config.ts  wdio.conf.ts
.storybook/: main.ts
evacuation-gui-iced/: Cargo.toml
evacuation-gui-iced/src/: main.rs  python.rs
evacuation-gui-iced/src/gui/: tabs.rs
evacuation-gui-iced/src/gui/tabs/: cfg_tab.rs  visualization_tab.rs
evacuation-gui-iced/src/python/: call_python.rs
src/: CMakeLists.txt  bim_configure.c  bim_configure.h  bim_evac.c  bim_evac.h  bim_graph.c  bim_graph.h  bim_json_object.c  bim_json_object.h  bim_output.c  bim_output.h  bim_polygon_tools.c  bim_polygon_tools.h  bim_tools.c  bim_tools.h  bim_uuid.h  run.c  run.h
src-tauri/: .gitignore  Cargo.toml  build.rs  log.txt  tauri.conf.json
src-tauri/src/: bim.rs  bim_output.rs  main.rs  run_bindings.rs
src-tauri/src/bim/: bim_configure.rs  bim_evac.rs  bim_graph.rs  bim_json_object.rs  bim_output.rs  bim_polygon_tools.rs  bim_tools.rs  configuration.rs  graph.rs  json_object.rs  json_renga.rs
src-tauri/src/bim_configure/: Cargo.toml
src-tauri/src/bim_evac/: Cargo.toml
src-tauri/src/bim_evac/src/: bim_evac_rust.h  lib.rs
src-tauri/src/bim_graph/: .gitignore  Cargo.toml
src-tauri/src/bim_graph/src/: bim_graph_rust.h
src-tauri/src/bim_json_object/: Cargo.toml
src-tauri/src/bim_json_object/src/: bim_json_object_rust.h
src-tauri/src/bim_output/: Cargo.toml
src-tauri/src/bim_output/src/: lib.rs
src-tauri/src/bim_polygon_tools/: Cargo.toml  build.rs
src-tauri/src/bim_tools/: Cargo.toml
src-tauri/src/gui/: tabs.rs
src-tauri/src/gui/tabs/: cfg_tab.rs  visualization_tab.rs
src-tauri/src/run/: Cargo.toml
src-tauri/src/snapshots/: evacuation__bim__tests__evacuation_modeling@b1-v2.1_with_corridors_v1.1-density-0.1.snap  evacuation__bim__tests__evacuation_modeling@b1-v2.1_with_corridors_v1.1-density-0.2.snap  evacuation__bim__tests__evacuation_modeling@b1-v2.1_with_corridors_v1.1-density-0.3.snap  evacuation__bim__tests__evacuation_modeling@b1-v2.1_with_corridors_v1.1-density-0.4.snap  evacuation__bim__tests__evacuation_modeling@b1-v2.1_with_corridors_v1.1-density-0.5.snap  evacuation__bim__tests__evacuation_modeling@b1-v2.1_with_corridors_v1.1-density-1.0.snap  evacuation__bim__tests__evacuation_modeling@b1-v2.1_with_corridors_v1.1-density-2.0.snap  evacuation__bim__tests__evacuation_modeling@b1-v2.1_with_corridors_v1.1-density-3.0.snap  evacuation__bim__tests__evacuation_modeling@b1-v2.1_with_corridors_v1.1-density-4.0.snap  evacuation__bim__tests__evacuation_modeling@building_test-density-0.2.snap  evacuation__bim__tests__evacuation_modeling@building_test-density-0.3.snap  evacuation__bim__tests__evacuation_modeling@building_test-density-0.4.snap  evacuation__bim__tests__evacuation_modeling@building_test-density-0.5.snap  evacuation__bim__tests__evacuation_modeling@building_test-density-1.0.snap  evacuation__bim__tests__evacuation_modeling@building_test-density-2.0.snap  evacuation__bim__tests__evacuation_modeling@building_test-density-3.0.snap  evacuation__bim__tests__evacuation_modeling@building_test-density-4.0.snap  evacuation__bim__tests__evacuation_modeling@building_test.snap  evacuation__bim__tests__evacuation_modeling@building_test.snap.new  evacuation__bim__tests__evacuation_modeling@example-one-exit-density-0.1.snap  evacuation__bim__tests__evacuation_modeling@example-one-exit-density-0.2.snap  evacuation__bim__tests__evacuation_modeling@example-one-exit-density-0.3.snap  evacuation__bim__tests__evacuation_modeling@example-one-exit-density-0.4.snap  evacuation__bim__tests__evacuation_modeling@example-one-exit-density-0.5.snap  evacuation__bim__tests__evacuation_modeling@example-one-exit-density-1.0.snap  evacuation__bim__tests__evacuation_modeling@example-one-exit-density-2.0.snap  evacuation__bim__tests__evacuation_modeling@example-one-exit-density-3.0.snap  evacuation__bim__tests__evacuation_modeling@example-one-exit-density-4.0.snap  evacuation__bim__tests__evacuation_modeling@example-one-exit.snap.new  evacuation__bim__tests__evacuation_modeling@example-two-exits-density-0.1.snap  evacuation__bim__tests__evacuation_modeling@example-two-exits-density-0.2.snap  evacuation__bim__tests__evacuation_modeling@example-two-exits-density-0.3.snap  evacuation__bim__tests__evacuation_modeling@example-two-exits-density-0.4.snap  evacuation__bim__tests__evacuation_modeling@example-two-exits-density-0.5.snap  evacuation__bim__tests__evacuation_modeling@example-two-exits-density-1.0.snap  evacuation__bim__tests__evacuation_modeling@example-two-exits-density-2.0.snap  evacuation__bim__tests__evacuation_modeling@example-two-exits-density-3.0.snap  evacuation__bim__tests__evacuation_modeling@example-two-exits-density-4.0.snap  evacuation__bim__tests__evacuation_modeling@example-two-exits.snap.new  evacuation__bim__tests__evacuation_modeling@one_zone_one_exit-density-0.5.snap  (+105 more)
src/bim_cli/src/: lib.rs
src/bim_configure/: Cargo.toml
src/bim_configure/src/: bim_configure_rust.h
src/bim_evac/: Cargo.toml
src/bim_evac/src/: bim_evac_rust.h  lib.rs
src/bim_graph/: Cargo.toml
src/bim_graph/src/: bim_graph_rust.h  lib.rs
src/bim_json_object/: Cargo.toml
src/bim_json_object/src/: bim_json_object_rust.h  lib.rs
src/bim_output/: Cargo.toml
src/bim_output/src/: bim_output_rust.h  lib.rs
src/bim_polygon_tools/: Cargo.toml  build.rs
src/bim_polygon_tools/src/: bim_polygon_tools_rust.h  lib.rs
src/bim_tools/: Cargo.toml
src/bim_tools/src/: bim_tools_rust.h  lib.rs
src/cli/src/: lib.rs
src/configuration/: Cargo.toml
src/configuration/src/: lib.rs
src/graph/: Cargo.toml
src/graph/src/: lib.rs
src/json_object/: Cargo.toml
src/json_object/src/: lib.rs
src/run/: Cargo.toml
src/run/src/: lib.rs
(+174 files in other folders)
