[package]
name = "evacuation"
version = "0.1.0"
description = "A Tauri App"
authors = [""]
license = ""
repository = ""
default-run = "evacuation"
edition = "2021"
rust-version = "1.67"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }
cc = { version = "1.0", features = ["parallel"] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all"] }
chrono = "0.4"
libc = "0.2"
fnv = "1.0"
petgraph = "0.6"
rand = "0.8.5"
uuid = { version = "1.3", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
triangle-rs = { git = "https://github.com/NikBel3476/triangle-rs.git", branch = "main" }
spade = "2.2.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
