[package]
name = "evacuation"
version = "0.1.0"
description = "Evacuation modeling App"
authors = [""]
license = ""
repository = ""
default-run = "evacuation"
edition = "2021"
rust-version = "1.77"

[dependencies]
serde_json = "1.0.116"
serde = { version = "1.0.200", features = ["derive"] }
chrono = "0.4.38"
fnv = "1.0.7"
petgraph = "0.6.3"
rand = "0.8.5"
uuid = { version = "1.8", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }
triangle-rs = { git = "https://github.com/NikBel3476/triangle-rs.git", rev = "0a8faac" }
spade = "2.2.0"
triangulate = { git = "https://github.com/colinjneville/triangulate.git", branch = "master" }
pyo3 = { version = "0.18.3", features = ["auto-initialize"] }
iced = { version = "0.12.1", features = ["canvas"] }
rfd = "0.14.1"

[dev-dependencies]
insta = { version = "1.29.0", features = ["yaml"] }
rstest = "0.18.1"
