[package]
name = "bim_evac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
bim_json_object = { path = "../bim_json_object" }
bim_tools = { path = "../bim_tools" }

[lib]
crate-type=["staticlib", "lib"]