[package]
name = "bim_json_object"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
json_object = { path = "../../../src/json_object" }
bim_polygon_tools = { path = "../../../src/bim_polygon_tools" }

[lib]
crate-type=["staticlib", "lib"]