[package]
name = "bim_polygon_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
json_object = { path = "../json_object" }

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[lib]
crate-type=["staticlib", "lib"]